<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProductActivity">

    <item android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@android:string/search_go"
        android:icon="@mipmap/ic_search_white_48dp"
        android:actionLayout="@layout/product_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_categories"
        android:orderInCategory="200"
        android:title="@string/action_categories"
        android:icon="@mipmap/ic_list_white_48dp"
        app:showAsAction="always" >
    <menu>
        <item
            android:id="@+id/categoryItem"
            android:title="@string/all_categories" >
        </item>
    </menu>
    </item>

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="300"
        android:title="@string/action_exit"
        android:icon="@mipmap/ic_clear_white_48dp"
        app:showAsAction="always"
        android:onClick="finishProductActivity"  />
</menu>


<!--<item-->
<!--android:id="@+id/action_orders"-->
<!--android:orderInCategory="100"-->
<!--android:title="@string/action_orders"-->
<!--app:showAsAction="never" />-->

    <!--ic_list_white_36dp-->


    <!--android:onClick="selectCategory"-->